--- a/MvcUi/MvcUi.csproj
+++ b/MvcUi/MvcUi.csproj
@@ -176,7 +176,9 @@
     </Compile>
     <Compile Include="Infrastructure\CustomErrorHandlerAttribute.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
+    <Compile Include="Infrastructure\UserAgentConstraint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Index.cs" />
     <Compile Include="ViewModels\LoginModel.cs" />
     <Compile Include="ViewModels\RegisterModel.cs" />
   </ItemGroup>
@@ -218,7 +220,6 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Bazuka.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
@@ -233,9 +234,13 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TeamProject.DAL\TeamProject.DAL.csproj">
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{5E42539A-00E1-474E-8081-3A3111210996}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TeamProject.DAL\DAL.csproj">
       <Project>{ba37c1f2-2498-4e94-a19b-096091d78b2e}</Project>
-      <Name>TeamProject.DAL</Name>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
