--- a/MvcUi/Web.config
+++ b/MvcUi/Web.config
@@ -82,17 +82,19 @@
     </modules>
   </system.webServer>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="MySql.Data.MySqlClient"
-          type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6"/>
-      <provider invariantName="System.Data.SqlClient"
-          type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <system.web>
     <authentication mode="Forms">
       <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
     </authentication>
+    <customErrors mode="On">
+      <error statusCode="500" redirect="~/Home/Index" />
+      <error statusCode="404" redirect="~/Home/Index" />
+    </customErrors>
   </system.web>
 </configuration>
