--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,6 +47,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive, Version=1.0.10621.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\email.1.1.1\lib\net40\System.Reactive.dll</HintPath>
@@ -62,9 +63,15 @@
   <ItemGroup>
     <Compile Include="Abstract\IAccountManager.cs" />
     <Compile Include="Abstract\IEmailService.cs" />
+    <Compile Include="Abstract\IMovieBuilderVM.cs" />
+    <Compile Include="Abstract\IMovieManager.cs" />
     <Compile Include="Managers\AccountManager.cs" />
     <Compile Include="Managers\MyEmailSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Account\LoginModel.cs" />
+    <Compile Include="ViewModels\Account\Page1Model.cs" />
+    <Compile Include="ViewModels\Account\RegisterModel.cs" />
+    <Compile Include="ViewModels\Account\MovieModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TeamProject.DAL\DAL.csproj">
