First five items shows on page, Don't know about redirecting anything/ Take care about auth with rca compiling/

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -63,15 +63,17 @@
   <ItemGroup>
     <Compile Include="Abstract\IAccountManager.cs" />
     <Compile Include="Abstract\IEmailService.cs" />
-    <Compile Include="Abstract\IMovieBuilderVM.cs" />
+    <Compile Include="Abstract\IMovieVMBuilder.cs" />
     <Compile Include="Abstract\IMovieManager.cs" />
     <Compile Include="Managers\AccountManager.cs" />
+    <Compile Include="Managers\MovieManager.cs" />
     <Compile Include="Managers\MyEmailSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\LoginModel.cs" />
     <Compile Include="ViewModels\Account\Page1Model.cs" />
     <Compile Include="ViewModels\Account\RegisterModel.cs" />
-    <Compile Include="ViewModels\Account\MovieModel.cs" />
+    <Compile Include="ViewModels\Movie\MovieModel.cs" />
+    <Compile Include="VMBuilders\MovieVMBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TeamProject.DAL\DAL.csproj">
