--- a/MvcUi/MvcUi.csproj
+++ b/MvcUi/MvcUi.csproj
@@ -179,9 +179,6 @@
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Infrastructure\UserAgentConstraint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\Account\Page1Model.cs" />
-    <Compile Include="ViewModels\Account\LoginModel.cs" />
-    <Compile Include="ViewModels\Account\RegisterModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -228,6 +225,8 @@
     <Content Include="Views\Home\Page1.cshtml" />
     <Content Include="Views\Shared\_EnterLoginLayout.cshtml" />
     <Content Include="Views\Movie\Page2.cshtml" />
+    <Content Include="Views\Movie\List5.cshtml" />
+    <Content Include="Views\Shared\Movie\MovieSummary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
