--- a/Business.Tests/Business.Tests.csproj
+++ b/Business.Tests/Business.Tests.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Managers\AccountManagerTests.cs" />
+    <Compile Include="Managers\MovieManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
