--- a/MvcUi/MvcUi.csproj
+++ b/MvcUi/MvcUi.csproj
@@ -224,7 +224,7 @@
     <Content Include="Views\Shared\UserName.cshtml" />
     <Content Include="Views\Home\Page1.cshtml" />
     <Content Include="Views\Shared\_EnterLoginLayout.cshtml" />
-    <Content Include="Views\Movie\Page2.cshtml" />
+    <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\List5.cshtml" />
     <Content Include="Views\Shared\Movie\MovieSummary.cshtml" />
   </ItemGroup>
