--- a/MvcUi/Web.config
+++ b/MvcUi/Web.config
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />  
   </configSections>
   <connectionStrings>
-    <add name="CinemaContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3307;database=Cinema;uid=pavel;password=12345" />
+    <add name="CinemaContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=Cinema;uid=root;password=root" />
   </connectionStrings>
   <nlog autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <variable name="logDirectory" value="${basedir}/Content/logs/${shortdate}" />
