--- a/MvcUi/Web.config
+++ b/MvcUi/Web.config
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />  
   </configSections>
   <connectionStrings>
-    <add name="CinemaContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=Cinema;uid=root;password=root" />
+    <add name="CinemaContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=Cinema;uid=root;password=1415301997mn" />
   </connectionStrings>
   <nlog autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <variable name="logDirectory" value="${basedir}/Content/logs/${shortdate}" />
@@ -65,6 +65,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.7.0" newVersion="7.0.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
