--- a/TeamProject.DAL/DAL.csproj
+++ b/TeamProject.DAL/DAL.csproj
@@ -63,6 +63,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,14 +75,14 @@
     <Compile Include="CinemaContext.cs" />
     <Compile Include="Entities\Interfaces\IEntity.cs" />
     <Compile Include="Entities\Movie.cs" />
-    <Compile Include="Entities\View.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\View.cs" />
     <Compile Include="ICinemaWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
     <Compile Include="Repositories\MovieRepository.cs" />
-    <Compile Include="Repositories\ViewRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="Repositories\ViewRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
